# japanese-study

./: .deploy-config.example  .env.example  .gitignore  Dockerfile  LATENCY_PLAN.md  PLAN.md  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile.dev  pyproject.toml  seed_users.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py
backend/app/api/: admin.py  audio.py  chat.py  curriculum.py  profile.py  sessions.py  uploads.py  users.py  voice.py
backend/app/curriculum/: __init__.py  seed.py  study.py
backend/app/llm/: __init__.py  base.py  bedrock.py  claude.py  gemini.py  openai_provider.py  router.py
backend/app/profile/: __init__.py  extract.py
backend/app/schemas/: __init__.py  curriculum.py  users.py
backend/app/session/: __init__.py  orchestrator.py  streaming.py  uploads.py
backend/app/speech/: __init__.py  base.py  gcloud.py  hints.py  openai_speech.py  router.py
backend/scripts/: export_lesson_plans.py  generate_lesson_plans.py  generated_lesson_plans.json  import_lesson_plans.py  lesson_plans_a1.json  seed_interests.py  write_flagships.py
backend/tests/: conftest.py  test_admin_guard.py  test_chat_api.py  test_curriculum_api.py  test_db.py  test_healthz.py  test_llm_claude.py  test_llm_providers.py  test_profile_extract.py  test_seed_users_cli.py  test_sessions_api.py  test_speech_gcloud.py  test_speech_hints.py  test_speech_openai.py  test_study_sections.py  test_uploads_api.py  test_users_api.py  test_voice_api.py  test_voice_stream.py
frontend/: .eslintrc.json  Dockerfile.dev  index.html  package.json  (+2 more)
(+26 files in other folders)
