[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "japanese-study-backend"
version = "0.1.0"
description = "FastAPI backend for the Japanese Conversation Practice App"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.18",
    "anthropic==0.49.0",
    "google-genai==1.14.0",
    "google-cloud-speech==2.27.0",
    "google-cloud-texttospeech==2.21.1",
    "openai==1.57.0",
    "boto3==1.35.81",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "ruff==0.7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
